refactor: 공통 인증 로직을 'common-auth' 모듈로 분리